--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "https://github.com/OscarH1025/reactport",
   "name": "oscar",
   "version": "0.1.0",
   "private": true,
